--- a/index.html
+++ b/index.html
@@ -257,10 +257,10 @@
       </svg>
 
       <!-- Landing -->
-      <div id="landing" class="relative w-full h-full bg-white">
+      <div id="landing" class="relative w-full h-full">
         <!-- Background -->
         <div
-          class="absolute top-0 left-0 z--1 w-full h-full pointer-events-none transform scale-105 overflow-hidden"
+          class="absolute top-0 left-0 bg-white z--1 w-full h-full pointer-events-none transform scale-105 overflow-hidden"
           style="transform-origin: center center;"
         >
           <ul id="scene" class="w-full h-full object-cover overflow-hidden">
