--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@
 
           <!-- Form -->
 
-          <div class="w-full relative -ml-2">
+          <div class="w-full relative -ml-2 mb-8">
             <form
               action=""
               class="w-full bg-white shadow-md p-4 sm:p-8 lg:px-16"
