--- a/index.html
+++ b/index.html
@@ -26,24 +26,38 @@
       }
 
       body {
-        transform: translate3d(0, 0, 0);
+        -webkit-transform: translate3d(0, 0, 0);
+                transform: translate3d(0, 0, 0);
         font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont,
-          "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", sans-serif,
-          "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
-          "Noto Color Emoji";
+      "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+      "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
+      "Noto Color Emoji";
       }
 
       .fly {
-        animation: fly 800ms;
+        -webkit-animation: fly 800ms;
+                animation: fly 800ms;
+      }
+
+      @-webkit-keyframes fly {
+        0% {
+          -webkit-transform: translateX(0) translateY(0) rotate(0);
+                  transform: translateX(0) translateY(0) rotate(0);
+        }
+        100% {
+          -webkit-transform: translateX(3rem) translateY(-0.5rem) rotate(-15deg);
+                  transform: translateX(3rem) translateY(-0.5rem) rotate(-15deg);
+        }
       }
 
       @keyframes fly {
         0% {
-          transform: translateX(0) translateY(0) rotate(0);
+          -webkit-transform: translateX(0) translateY(0) rotate(0);
+                  transform: translateX(0) translateY(0) rotate(0);
         }
-
         100% {
-          transform: translateX(3rem) translateY(-0.5rem) rotate(-15deg);
+          -webkit-transform: translateX(3rem) translateY(-0.5rem) rotate(-15deg);
+                  transform: translateX(3rem) translateY(-0.5rem) rotate(-15deg);
         }
       }
 
@@ -71,12 +85,17 @@
       }
 
       #cta .linkBorder {
-        transform: translate(0.375rem, -0.375rem) translate3d(0, 0, 0);
+        -webkit-transform: translate(0.375rem, -0.375rem) translate3d(0, 0, 0);
+                transform: translate(0.375rem, -0.375rem) translate3d(0, 0, 0);
+        -webkit-transition: -webkit-transform 300ms ease-out;
+        transition: -webkit-transform 300ms ease-out;
         transition: transform 300ms ease-out;
+        transition: transform 300ms ease-out, -webkit-transform 300ms ease-out;
       }
 
       #cta:hover .linkBorder {
-        transform: translate(0.25rem, -0.25rem) translate3d(0, 0, 0);
+        -webkit-transform: translate(0.25rem, -0.25rem) translate3d(0, 0, 0);
+                transform: translate(0.25rem, -0.25rem) translate3d(0, 0, 0);
       }
 
       .yellowDecoration span,
@@ -110,7 +129,17 @@
         background-color: #ff206e;
       }
 
+      #landing *::-moz-selection {
+        background: #fbff12;
+        color: #0c0f0a;
+      }
+
       #landing *::selection {
+        background: #fbff12;
+        color: #0c0f0a;
+      }
+
+      #works *::-moz-selection {
         background: #fbff12;
         color: #0c0f0a;
       }
@@ -120,9 +149,21 @@
         color: #0c0f0a;
       }
 
+      #skills *::-moz-selection,
+      #card2::-moz-selection {
+        background: #41ead4 !important;
+        color: #0c0f0a;
+      }
+
       #skills *::selection,
       #card2::selection {
         background: #41ead4 !important;
+        color: #0c0f0a;
+      }
+
+      #work-history *::-moz-selection,
+      #card3::-moz-selection {
+        background: #ff206e;
         color: #0c0f0a;
       }
 
@@ -138,11 +179,25 @@
 
       .click {
         opacity: 0;
-        transform: rotate(8deg) translateY(-5%) translateX(5%);
+        -webkit-transform: rotate(8deg) translateY(-5%) translateX(5%);
+                transform: rotate(8deg) translateY(-5%) translateX(5%);
       }
 
       .click-animation {
-        animation: click 0.15s forwards;
+        -webkit-animation: click 0.15s forwards;
+                animation: click 0.15s forwards;
+      }
+
+      @-webkit-keyframes click {
+        0% {
+          opacity: 1;
+        }
+        50% {
+          opacity: 1;
+        }
+        100% {
+          opacity: 0;
+        }
       }
 
       @keyframes click {
@@ -156,38 +211,52 @@
           opacity: 0;
         }
       }
+
       @media screen and (min-width: 598px) {
         .social:hover .social-text {
           max-height: 0;
           opacity: 0;
-          transform: translateY(1rem);
+          -webkit-transform: translateY(1rem);
+                  transform: translateY(1rem);
         }
-
         .social-box svg {
+          -webkit-transition: -webkit-transform 300ms translate3d(0, 0, 0);
+          transition: -webkit-transform 300ms translate3d(0, 0, 0);
           transition: transform 300ms translate3d(0, 0, 0);
+          transition: transform 300ms translate3d(0, 0, 0), -webkit-transform 300ms translate3d(0, 0, 0);
         }
-
         .social:hover svg {
-          transform: translateY(1rem);
+          -webkit-transform: translateY(1rem);
+                  transform: translateY(1rem);
         }
-
         .social .social-text {
           max-height: 3rem;
           opacity: 1;
-          transform: translateY(0);
+          -webkit-transform: translateY(0);
+                  transform: translateY(0);
+          -webkit-transition: max-height 300ms, opacity 300ms, tranform 300ms;
           transition: max-height 300ms, opacity 300ms, tranform 300ms;
         }
       }
 
       .social-box:hover .social {
-        filter: brightness(0.6);
-        transform: translate3d(0, 0, 0);
+        -webkit-filter: brightness(0.6);
+                filter: brightness(0.6);
+        -webkit-transform: translate3d(0, 0, 0);
+                transform: translate3d(0, 0, 0);
+        -webkit-transition: -webkit-filter 300ms;
+        transition: -webkit-filter 300ms;
         transition: filter 300ms;
+        transition: filter 300ms, -webkit-filter 300ms;
       }
 
       .social-box .social:hover {
-        filter: brightness(1);
+        -webkit-filter: brightness(1);
+                filter: brightness(1);
+        -webkit-transition: -webkit-filter 300ms;
+        transition: -webkit-filter 300ms;
         transition: filter 300ms;
+        transition: filter 300ms, -webkit-filter 300ms;
       }
 
       .social .social-text {
@@ -574,7 +643,7 @@
       </div>
 
       <!-- About -->
-      <div id="skills" class="w-full bg-white">
+      <div id="skills" class="w-full">
         <!-- Accent Line -->
         <div
           class="w-full h-6 bg-myTeal"
