--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta name="theme-color" content="#FBFF12" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="title" content="Priti Rathod - Web Developer" />
+    <meta name="title" content="Your Name" />
     <meta
       name="description"
-      content="I am Priti Rathod, Invercargill- New Zealand based Web and App Developer specializing in bespoke, artisanal, single origin, grass fed, fixed gear, and slow roasted Website & Apps for clients of all sizes. Currently working for Market South."
+      content="I am Name, I do this, I do that :D"
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap"
@@ -172,6 +172,16 @@
         background: #ff206e;
         color: #0c0f0a;
       }
+      
+      footer *::-moz-selection {
+        background: #0c0f0a;
+        color: #FFFFFF;
+      }
+
+      footer *::selection {
+        background: #0c0f0a;
+        color: #FFFFFF;
+      }
 
       .z--1 {
         z-index: -1 !important;
@@ -263,7 +273,7 @@
         margin-top: 1rem;
       }
     </style>
-    <title>Priti Rathod - Web Developer</title>
+    <title>Your Name</title>
   </head>
   <body class="relative antialiased bg-myLightGray">
     <main class="relative overflow-hidden text-myBlack">
@@ -354,7 +364,7 @@
           <h6
             class="w-full text-base md:text-xl font-medium tracking-wide mb-2"
           >
-            Hi, My name is <span class="font-bold">Priti Rathod</span>.
+            Hi, My name is <span class="font-bold">Your Name</span>.
           </h6>
           <!-- Heading -->
           <h1
@@ -374,7 +384,7 @@
             >
               <div class="flex">
                 <svg
-                  class="w-4 h-4 md:w-5 md:h-5 mt-1 md:mt-px mr-2 text-gray-700"
+                  class="w-4 h-4 md:w-5 md:h-5 mt-1 md:mt-px mr-2 text-gray-700 transform md:translate-y-px"
                   width="24"
                   height="24"
                   viewBox="0 0 24 24"
@@ -396,7 +406,7 @@
                     stroke-linejoin="round"
                   />
                 </svg>
-                <span>Invercargill - New Zealand</span>
+                <span>Your Location, Earth</span>
               </div>
               <div class="flex">
                 <svg
@@ -415,7 +425,7 @@
                     stroke-linejoin="round"
                   />
                 </svg>
-                <span>Web and App Developer</span>
+                <span>Your Job's Name</span>
               </div>
             </div>
           </div>
@@ -467,7 +477,7 @@
                 <!-- Image -->
                 <div class="rectangle relative w-full flex-shrink-0">
                   <img
-                    src="./images/FireFlour-bread.png"
+                    src="./images/Decoration.svg"
                     alt=""
                     class="w-full h-full absolute top-0 left-0 object-cover"
                   />
@@ -480,18 +490,16 @@
                     <h6
                       class="font-medium text-lg text-myBlack uppercase tracking-wide"
                     >
-                      Fire & Flour Bread
+                      First Project
                     </h6>
                     <p class="text-base text-gray-800">
-                      Fire & Flour makes use of Squarespace to present their
-                      hand-made community bread brand in a visually appealing
-                      way.
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur veritatis, laboriosam tempora iure deserunt velit quo delectus officia ratione.
                     </p>
                   </div>
                   <div class="w-full flex">
                     <a
                       class="text-base text-yellow-800 flex focus:outline-none focus:shadow-outline"
-                      href="http://www.fireandflourbread.com/"
+                      href="#"
                     >
                       View Project
                       <svg
@@ -526,7 +534,7 @@
                 <!-- Image -->
                 <div class="rectangle relative w-full flex-shrink-0">
                   <img
-                    src="./images/unfiltered.png"
+                    src="./images/Decoration.svg"
                     alt=""
                     class="w-full h-full absolute top-0 left-0 object-cover"
                   />
@@ -539,19 +547,16 @@
                     <h6
                       class="font-medium text-lg text-myBlack uppercase tracking-wide"
                     >
-                      Unfiltered
+                      Second Project
                     </h6>
                     <p class="text-base text-gray-800">
-                      Unfiltered TV is a global education platform, founded in
-                      New Zealand in 2015, dedicated to democratizing the
-                      knowledge and wisdom of the world's most successful
-                      business leaders.
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda animi dolores quis esse tempora maiores.
                     </p>
                   </div>
                   <div class="w-full flex">
                     <a
                       class="text-base text-teal-800 flex focus:outline-none focus:shadow-outline"
-                      href="https://www.unfiltered.tv/"
+                      href="#"
                     >
                       View Project
                       <svg
@@ -586,7 +591,7 @@
                 <!-- Image -->
                 <div class="rectangle relative w-full flex-shrink-0">
                   <img
-                    src="./images/Parenting-Place.png"
+                    src="./images/Decoration.svg"
                     alt=""
                     class="w-full h-full absolute top-0 left-0 object-cover"
                   />
@@ -599,12 +604,10 @@
                     <h6
                       class="font-medium text-lg text-myBlack uppercase tracking-wide"
                     >
-                      Parenting Place
+                      Third Project
                     </h6>
                     <p class="text-base text-gray-800">
-                      The parenting place website is a WordPress website. Every
-                      page of its site has been designed cleanly with inhouse
-                      photographer.
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, illum sunt! Ipsam ipsa et eos?
                     </p>
                   </div>
                   <div class="w-full flex">
@@ -664,12 +667,7 @@
           </h1>
 
           <p class="text-xl md:text-3xl mb-8 text-gray-800 tracking-wide">
-            "I have worked in a variety of environments, from
-            <span class="italic">mega-consultancies</span> to
-            <span class="italic">small-ish</span> agencies to
-            <span class="italic"></span>product companies. From workflow
-            diagrams to detailed user interface mockups, I love shaping and
-            <span class="italic">crafting</span> on-screen experiences."
+            "Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem voluptatibus dolorem reiciendis, rerum, illo repellat libero voluptate eligendi pariatur laborum velit eaque quod facilis optio harum aliquid reprehenderit nulla perspiciatis veniam! Fugiat suscipit nesciunt dolorem asperiores facilis sint tempora consequuntur?"
           </p>
 
           <!-- Skills -->
@@ -687,11 +685,19 @@
               >
                 <div class="flex items-center w-full">
                   <img
-                    src="./images/icons/Craft CMS.svg"
-                    alt="cms"
+                    src="./images/icons/CSS.svg"
+                    alt="css"
                     class="flex-shrink-0 h-8 w-8 mr-4"
                   />
-                  <p class="flex-1">Craft CMS</p>
+                  <p class="flex-1">CSS3</p>
+                </div>
+                <div class="flex items-center w-full">
+                  <img
+                    src="./images/icons/CSS.svg"
+                    alt="css"
+                    class="flex-shrink-0 h-8 w-8 mr-4"
+                  />
+                  <p class="flex-1">CSS3</p>
                 </div>
                 <div class="flex items-center w-full">
                   <img
@@ -716,14 +722,6 @@
                     class="flex-shrink-0 h-8 w-8 mr-4"
                   />
                   <p class="flex-1">PHP</p>
-                </div>
-                <div class="flex items-center w-full">
-                  <img
-                    src="./images/icons/Twig.svg"
-                    alt="twig"
-                    class="flex-shrink-0 h-8 w-8 mr-4"
-                  />
-                  <p class="flex-1">Twig</p>
                 </div>
                 <div class="flex items-center w-full">
                   <img
@@ -827,51 +825,68 @@
             <div class="w-full grid grid-cols-1 sm:grid-cols-3 gap-2 sm:gap-8">
               <div class="col-span-2 w-full grid grid-cols-1">
                 <h3 class="text-xl md:text-3xl font-medium tracking-wide">
-                  OMNI HEALTH LTD
+                  Company's Name Pvt. Ltd.
                 </h3>
                 <p class="text-base md:text-xl text-gray-700">
-                  Mobile Application Developer | Auckland, NZ
+                  Your Job's Name | Location, Earth
                 </p>
               </div>
               <!-- From To -->
               <p
-                class="text-left sm:text-right text-base md:text-2xl font-medium text-gray-700"
+                class="text-left sm:text-right text-sm md:text-xl font-medium text-gray-700"
               >
-                July 16 - Sept. 17
+                Aug. 2012 - Sept. 2014
               </p>
             </div>
             <!-- Job -->
             <div class="w-full grid grid-cols-1 sm:grid-cols-3 gap-2 sm:gap-8">
               <div class="col-span-2 w-full grid grid-cols-1">
                 <h3 class="text-xl md:text-3xl font-medium tracking-wide">
-                  ARBRE HEALTH LTD
+                  Company's Name Pvt. Ltd.
                 </h3>
                 <p class="text-base md:text-xl text-gray-700">
-                  Software Developer | Auckland, NZ
+                  Your Job's Name | Location, Earth
                 </p>
               </div>
               <!-- From To -->
               <p
-                class="text-left sm:text-right text-base md:text-2xl font-medium text-gray-700"
+                class="text-left sm:text-right text-sm md:text-xl font-medium text-gray-700"
               >
-                Sept. 17 - Nov. 18
+                Sept. 2014 - Nov. 2016
               </p>
             </div>
             <!-- Job -->
             <div class="w-full grid grid-cols-1 sm:grid-cols-3 gap-2 sm:gap-8">
               <div class="col-span-2 w-full grid grid-cols-1">
                 <h3 class="text-xl md:text-3xl font-medium tracking-wide">
-                  MARKET SOUTH LTD
+                  Company's Name Pvt. Ltd.
                 </h3>
                 <p class="text-base md:text-xl text-gray-700">
-                  Web Developer | Invercargill, NZ
+                  Your Job's Name | Location, Earth
                 </p>
               </div>
               <!-- From To -->
               <p
-                class="text-left sm:text-right text-base md:text-2xl font-medium text-gray-700"
+                class="text-left sm:text-right text-sm md:text-xl font-medium text-gray-700"
               >
-                Nov. 18 - <span class="font-medium text-gray-800">Present</span>
+                Nov. 2016 - Aug. 2018
+              </p>
+            </div>
+            <!-- Job -->
+            <div class="w-full grid grid-cols-1 sm:grid-cols-3 gap-2 sm:gap-8">
+              <div class="col-span-2 w-full grid grid-cols-1">
+                <h3 class="text-xl md:text-3xl font-medium tracking-wide">
+                  Company's Name Pvt. Ltd.
+                </h3>
+                <p class="text-base md:text-xl text-gray-700">
+                  Your Job's Name | Location, Earth
+                </p>
+              </div>
+              <!-- From To -->
+              <p
+                class="text-left sm:text-right text-sm md:text-xl font-medium text-gray-700"
+              >
+                Aug. 2018 - Present
               </p>
             </div>
           </div>
@@ -905,7 +920,7 @@
                   <input
                     type="text"
                     class="w-full focus:outline-none focus:shadow-outline border-2 border-myBlack py-2 px-4"
-                    placeholder="Priti Rathod"
+                    placeholder="Barack Obama"
                     required
                   />
                 </div>
@@ -1080,6 +1095,14 @@
               Instagram
             </p>
           </a>
+        </div>
+        <!-- My Info -->
+        <div class="w-full bg-myBlack text-white">
+          <div class="max-w-screen-xl w-full mx-auto px-8 md:px-16 lg:px-32 py-6 text-gray-500 flex justify-center">
+            <p class="text-xs">
+              Copyright &copy; 2020, Your Name | Designed & Developed by <a class="text-white underline" href="https://github.com/xrishi20">Rishi</a>.
+            </p>
+          </div>
         </div>
       </footer>
     </main>
