--- a/index.html
+++ b/index.html
@@ -1100,7 +1100,7 @@
         <div class="w-full bg-myBlack text-white">
           <div class="max-w-screen-xl w-full mx-auto px-8 md:px-16 lg:px-32 py-6 text-gray-500 flex justify-center">
             <p class="text-xs">
-              Copyright &copy; 2020, Your Name | Designed & Developed by <a class="text-white underline" href="https://github.com/xrishi20">Rishi</a>.
+              Copyright &copy; 2020, Your Name | Designed & Developed by <a class="text-white underline" href="https://xrishi20.github.io/Portfolio/">Rishi</a>.
             </p>
           </div>
         </div>
